# python-template-rye

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
test/: test_hello.py
