[project]
name = "python-template-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yongheng Chen", email = "changochen1@gmail.com" }
]
dependencies = [
    "ruff>=0.1.11",
    "coverage>=7.4.0",
    "pytest>=7.4.4",
]
readme = "README.md"
requires-python = ">= 3.12"

# [project.scripts]
# hello = "python-template-rye:hello"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

# [tool.hatch.metadata]
# allow-direct-references = true

# [tool.hatch.build.targets.wheel]
# packages = ["src/python_template_rye"]
